tests/format/misc/errors/js/explicit-resource-management/invalid-for-await-using-binding-of-of.js
for await (using of of of);
